--- a/style/Random/style.css
+++ b/style/Random/style.css
@@ -1174,6 +1174,10 @@ blockquote p {
 		margin-right: 15px;
 	}
 	
+	.postview > :last-child, .modcontrols .btn-toolbar .btn-group > :first-child {
+		margin-bottom: 10px;
+	}
+	
 	.profile-card-head h2 {
 		margin-left: 0;
 	}
